# wasi-protobuf

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
test/: person_test.cpp
wasi-build/: CMakeLists.txt  wasi-sdk-unified.cmake  wasi-sdk.cmake  wasi_stubs.cpp  wasm32-wasip1.cmake  wasm32-wasip2.cmake
